--- a/gui/designer/main_window.ui
+++ b/gui/designer/main_window.ui
@@ -140,7 +140,7 @@
          <rect>
           <x>10</x>
           <y>540</y>
-          <width>341</width>
+          <width>343</width>
           <height>61</height>
          </rect>
         </property>
@@ -196,16 +196,12 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QSpinBox" name="measureBox">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="minimum">
-            <number>1</number>
-           </property>
-           <property name="maximum">
-            <number>1</number>
-           </property>
+          <widget class="QComboBox" name="measureBox">
+           <item>
+            <property name="text">
+             <string>szt.</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
