--- a/gui/designer/services.ui
+++ b/gui/designer/services.ui
@@ -82,19 +82,6 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="3" column="1">
-         <widget class="QSpinBox" name="measureBox">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>1</number>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="1">
          <widget class="QLabel" name="label_3">
           <property name="text">
@@ -158,6 +145,15 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="measureBox">
+          <item>
+           <property name="text">
+            <string>szt.</string>
+           </property>
+          </item>
+         </widget>
         </item>
        </layout>
       </item>
