--- a/gui/designer/services.ui
+++ b/gui/designer/services.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>533</width>
-    <height>337</height>
+    <width>532</width>
+    <height>341</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -94,14 +94,7 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="2" column="1">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>j.m.</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
+         <item row="4" column="0">
           <widget class="QSpinBox" name="volumeBox">
            <property name="enabled">
             <bool>false</bool>
@@ -114,16 +107,6 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="3">
-          <widget class="QDoubleSpinBox" name="amountBox">
-           <property name="minimum">
-            <double>1.000000000000000</double>
-           </property>
-           <property name="maximum">
-            <double>99999.990000000005239</double>
-           </property>
-          </widget>
-         </item>
          <item row="2" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
@@ -131,10 +114,10 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="3">
-          <widget class="QDialogButtonBox" name="buttonBox">
-           <property name="standardButtons">
-            <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+         <item row="2" column="1">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>j.m.</string>
            </property>
           </widget>
          </item>
@@ -145,7 +128,14 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="3">
+         <item row="6" column="3">
+          <widget class="QDialogButtonBox" name="buttonBox">
+           <property name="standardButtons">
+            <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="3">
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -158,13 +148,79 @@
            </property>
           </spacer>
          </item>
-         <item row="3" column="1">
+         <item row="4" column="1">
           <widget class="QComboBox" name="measureBox">
            <item>
             <property name="text">
              <string>szt.</string>
             </property>
            </item>
+          </widget>
+         </item>
+         <item row="4" column="3">
+          <widget class="QDoubleSpinBox" name="amountBox">
+           <property name="minimum">
+            <double>1.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>99999.990000000005239</double>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="2">
+          <widget class="QComboBox" name="percentageBox">
+           <item>
+            <property name="text">
+             <string>17%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>15%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>14%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>12,5%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>12%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>10%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>8,5%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>5,5%</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>3%</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+         <item row="2" column="2">
+          <widget class="QLabel" name="label_5">
+           <property name="text">
+            <string>Stawka ryczałtu</string>
+           </property>
           </widget>
          </item>
         </layout>
